chore: update api capcha valid
