# docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/captcha": {
+        "/api/v1/user/captcha": {
             "post": {
                 "description": "根据邮箱发送验证吗，并更新数据库",
                 "consumes": [
@@ -48,7 +48,7 @@
                 }
             }
         },
-        "/api/v1/user": {
+        "/api/v1/user/register": {
             "post": {
                 "description": "注册新用户",
                 "consumes": [
