# initialize/router.go
@@ -10,6 +10,7 @@ func InitRouter(r *gin.Engine) {
 
 	userRouter := basicRouter.Group("/user")
 	{
-		userRouter.POST("", v1.Register)
+		userRouter.POST("/register", v1.Register)
+		userRouter.POST("/captcha", v1.CaptchaValid)
 	}
 }
